--- a/flexget/want/kdarama.yml
+++ b/flexget/want/kdarama.yml
@@ -3,4 +3,7 @@ series:
     - '시를 잊은 그대에게':
         set:
           tvdb_id: 343068
-    - '나의 아저씨'
+    - '배드파파'
+    - '나인룸'
+    - '플레이어'
+    - '흉부외과-심장을 훔친 의사들'
