--- a/flexget/want/kent.yml
+++ b/flexget/want/kent.yml
@@ -1,27 +1,33 @@
 series:
-  KENT:
+  KENT: # category in config.yml
     - '미운 우리 새끼'
-    - '백년손님'
+    - '자기야-백년손님'
     - '아는 형님'
     - '해피투게더'
     - '라디오스타'
-    - '효리네 민박'
     - '나 혼자 산다'
     - '런닝맨'
-    - '윤식당'
-    - '너의 목소리가 보여'
-    - '이방인'
     - '백종원의 골목식당'
-    - '발칙한 동거 빈방 있음'
+    - '도시어부'
     - '나만 믿고 따라와 도시어부'
     - '인생술집'
-    - '한끼줍쇼'
-    - '숲 속 작은 집'
     - '동상이몽2'
     - '냉장고를 부탁해'
-    - '안녕하세요'
-    - '현지에서 먹힐까'
-    - '원나잇 푸드트립'
-    - '숲속의 작은 집'
-    - '정글의 법칙'
-    - '스트리트 푸드파이터'
+    - '어서와 한국은 처음이지'
+    - '전지적 참견'
+    - '한끼줍쇼'
+    - '랜선라이프'
+    - '현실남녀2'
+    - '유 퀴즈 온 더 블럭'
+    - '수미네 반찬'
+    - '구내식당-남의 회사 유랑기'
+    - '신서유기 6'
+    - '현지에서 먹힐까 중국편'
+    - '진짜사나이300'
+    - '개그콘서트'
+    - '코미디 빅리그'
+    - '알쓸신잡 3'
+    - '선다방 가을겨울편'
+    - '한식대첩-고수외전'
+    - '프리한19'
+    - '주말 사용 설명서'
