--- a/flexget/secrets.yml
+++ b/flexget/secrets.yml
@@ -1,8 +1,9 @@
 folder:
 ############### Save Path #################
-  save_path: 4TB/
-  kent: korea/kent/
-  kdrama: korea/kdrama/
+# / 기준으로 작성
+  save_path: 4TB/       # /4TB/AutoDownload/kent/
+  kent: AutoDownload/kent/
+  kdrama: AutoDownload/kdrama/
 ############### Down Path #################
   down_path: SSD/
   downkent: 3/0/
